Added empty services, controllers, repositories. Refactored models and DTOs. Updated pom.xml, disabled security and add H2 dependency for now. Modified application.properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
+server.servlet.context-path=/api/v1
 
+##// Datasource properties
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=
+#spring.datasource.username=
+#spring.datasource.password=
+##// Keep the connection alive if idle for a long time (needed for production)
+## spring.datasource.tomcat.test-while-idle=true
+##// Send this query for staying alive
+## spring.datasource.tomcat.validation-query=SELECT 1
+#
+##// JPA / Hibernate properties
+##// What to do for every start of application
+#spring.jpa.show-sql=true
+##// Automatically creates schema in database if it's true. By default, it's false
+#spring.jpa.generate-ddl=
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
