Added spaced repetition logic, asynchronous method invocation. Modified Progress model and application.yml. Refactoring.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,12 @@ server:
   servlet:
     context-path: /api/v1
 
+app:
+  async:
+    core-pool-size: 2
+    max-pool-size: 4
+    queue-capacity: 40
+
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
