--- a/src/main/resources/application-h2.yml
+++ b/src/main/resources/application-h2.yml
@@ -32,7 +32,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
-    database: postgresql
+    database: h2
 
   sql:
     init:
