--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,36 @@
+server:
+  servlet:
+    context-path: ${CONTEXT_PATH}
+  port: ${SERVER_PORT:8080}
+
+app:
+  async:
+    core-pool-size: ${CORE_POOL_SIZE:2}
+    max-pool-size: ${MAX_POOL_SIZE:4}
+    queue-capacity: ${QUEUE_CAPACITY:40}
+
+security:
+  jwt:
+    secret-key: ${JWT_SECRET_KEY}
+    expiration: ${JWT_EXPIRATION}
+
 spring:
-  profiles:
-    # put "pg" instead of "h2" if you want to use PostgreSQL database configuration
-    active: h2
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: ${DATASOURCE_URL}
+    username: ${DATASOURCE_USERNAME}
+    password: ${DATASOURCE_PASSWORD}
+
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+    database: postgresql
+    defer-datasource-initialization: true
+
+  sql:
+    init:
+      mode: always
